# tox-poetry-dev-dependencies

./: .gitignore  .gitlab-ci.yml  .pydocstyle.ini  .style.yapf  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  mypy.ini  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
src/tox_poetry_dev_dependencies/: __init__.py  _hooks.py  _meta.py
test/: test_unit.py
