#


[check]
metadata = 1
strict = 1


[metadata]
author = sinoroc
author_email = sinoroc.code+python@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: tox
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Typing :: Typed
description = Let Tox know about Poetry's development dependencies
license = Apache-2.0
license_file = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
name = tox-poetry-dev-dependencies
project_urls =
    GitHub = https://github.com/sinoroc/tox-poetry-dev-dependencies
    GitLab = https://gitlab.com/sinoroc/tox-poetry-dev-dependencies
url = https://pypi.org/project/tox-poetry-dev-dependencies/


[options]
install_requires =
    importlib-metadata
    poetry-core ~= 1.0
    tox
package_dir =
    = src
packages = find:
python_requires = ~= 3.5


[options.entry_points]
tox =
    poetry_dev_dependencies = tox_poetry_dev_dependencies._hooks


[options.extras_require]
dev_package =
    twine
    wheel
dev_test =
    mypy
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-mypy
    pytest-pycodestyle
    pytest-pydocstyle
    pytest-pylint
    pytest-yapf3
    yapf


[options.packages.find]
where = src


# EOF
